# EquationSolver-cpp

./: CMakeLists.txt  Eq-solver.sublime-workspace  README.md
src/: CMakeLists.txt
src/MathTokenizer/: CMakeLists.txt
src/Token/: CMakeLists.txt
src/Token/Lexical/: Base.cpp  CMakeLists.txt  Number.cpp  Word.cpp
src/Token/Lexical/Base/: Base.cpp
src/Token/Lexical/include/: Base.h  IToken.h  Number.h  Word.h
test/: CMakeLists.txt
test/Acceptance/: CMakeLists.txt
test/Integration/MathTokenizer/: CMakeLists.txt
test/Unit/: CMakeLists.txt
test/Unit/MathTokenizer/: CMakeLists.txt  MathTokenizer.cpp  MathTokenizer.h
test/Unit/Token/Lexical/: CMakeLists.txt
test/Unit/Token/Lexical/Number/: NumberTest.cpp  NumberTest.h
test/Unit/Token/Lexical/Word/: WordTest.cpp  WordTest.h
test/Unit/Token/Lexical/include/: NumberTest.h  TokenTest.h  WordTest.h
test/Unit/Tokens/: CMakeLists.txt
test/Unit/Tokens/Number/: CMakeLists.txt  Number.cpp
